FIX: Fix css to hide too long multiselect button

--- a/static/scenario/modals/edit_node/index.css
+++ b/static/scenario/modals/edit_node/index.css
@@ -86,3 +86,8 @@ a { cursor:pointer; }
 #config .nav-tabs-vertical{
   display: flex;
 }
+
+button.multiselect{
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
